--- a/src/components/MobileMenu/style.css
+++ b/src/components/MobileMenu/style.css
@@ -5,7 +5,8 @@
     z-index: 9999;
     height: 100vh;
     width: 280px;
-    background: url("../../images/blog/33.jpg") center center/cover no-repeat local;
+  background: black;
+    background: url("../../images/blog/12.jpg") center center/cover no-repeat local;
     transition: all 0.3s ease 0s;
     box-shadow: 0px 10px 40px 0px rgba(50, 50, 50, 0.1);
     overflow-x: auto;
@@ -14,7 +15,8 @@
 .mobileMenu:lang(ar) {
     right: -280px;
     left: unset;}
-.mobileMenu:before{
+/* .mobileMenu.show:before, */
+.divBack{
     position: absolute;
     left: 0;
     top: 0;
@@ -22,6 +24,17 @@
     height: 100%;
     background: rgba(0, 0, 0, 0.8);
     content: "";
+}
+ 
+.bg-img{
+ opacity: 0.2;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 .responsivemenu .card-body{
     background: none;
@@ -32,6 +45,8 @@
 .mobileMenu.show{
     left: 0;
 }
+.mobileMenu.show::-webkit-scrollbar {
+    width: 0px;}
 .mobileMenu.show:lang(ar) {
     left: unset;
     right: 0;
@@ -46,6 +61,7 @@
     list-style: none;
     padding-inline-start: 0;
     padding-top: 30px;
+    /* background-color: rgba(0, 0, 0, 0.8); */
 }
 .responsivemenu li a,
 .responsivemenu li p{
@@ -110,20 +126,27 @@
 
 @media (max-width:767px){
     .mobileMenu {
-        width: 210px;
+        width: 260px;
     }
     .hero-style-1 .slide-caption {
         padding: 20px;
     }
     .showmenu {
-        right: -25px;
+        right: -3rem;
         text-align: end;
     }
     .showmenu:lang(ar) {
         right: unset;
         text-align: end;
-        left: -25px;}
+        left:-3rem;}
        ul.subUL  {padding: 0 9px;}
+    
+}
+@media (max-width:450px){
+    .mobileMenu {
+        width: 230px;
+    }
+ 
     
 }
 
