--- a/src/components/ProfileInfo/style.css
+++ b/src/components/ProfileInfo/style.css
@@ -1,5 +1,3 @@
- 
-
 .user-card-full {
   overflow: hidden
 }
@@ -32,14 +30,21 @@
 .user-profile {
   padding: 20px 0
 }
-.d-flex:lang(ar){direction: rtl;}
+
+.d-flex:lang(ar) {
+  direction: rtl;
+}
 
 .card-block {
   padding: 1.25rem;
   text-align: start;
-  
+
 }
-.card-block h6{font-family: 'Cairo-Regular';color:  #274091;}
+
+.card-block h6 {
+  font-family: 'Cairo-Regular';
+  color: #274091;
+}
 
 .m-b-25 {
   margin-bottom: 25px
@@ -49,28 +54,42 @@
   border-radius: 5px
 }
 
- .nameProfile{    color: white !important;
+.nameProfile {
+  color: white !important;
   font-family: 'Cairo-Regular';
   text-transform: capitalize;
-  font-size: 1.5rem;}
+  font-size: 1.5rem;
+}
+
 .carddd .card-block p {
   line-height: 25px
 }
-.carddd .card-block p.comp{    color: white;}
-.card-block.USerCont{    height: 100%;
+
+.carddd .card-block p.comp {
+  color: white;
+}
+
+.card-block.USerCont {
+  height: 100%;
   display: flex;
   width: 100%;
   flex-direction: column;
   justify-content: center;
-  row-gap: 1rem;}
-  .profileSection .ant-carousel .slick-slide img {
-    display: block;
-    margin: 0 auto;
+  row-gap: 1rem;
 }
-.profileSection .ant-carousel {padding-bottom: 1rem;}
+
+.profileSection .ant-carousel .slick-slide img {
+  display: block;
+  margin: 0 auto;
+}
+
+.profileSection .ant-carousel {
+  padding-bottom: 1rem;
+}
+
 @media only screen and (min-width: 1400px) {
   p {
-      font-size: 14px
+    font-size: 14px
   }
 }
 
@@ -79,11 +98,12 @@
 }
 
 .b-b-default {
-  border-bottom:  3px solid #c60874;
+  border-bottom: 3px solid #c60874;
 }
-.profileButton.ant-btn-primary  {
+
+.profileButton.ant-btn-primary {
   /* height: 100px; */
-      font-size: 1.1rem;
+  font-size: 1.1rem;
   border: 1px solid white;
   display: block;
   max-height: 50px;
@@ -92,12 +112,15 @@
   background: linear-gradient(to right, #c6087459, #27409187);
   backdrop-filter: blur(1px);
 }
-.profileButton.ant-btn-primary:hover ,.profileButton.ant-btn-primary:active
-,.profileButton.ant-btn-primary:focus
-{   
+
+.profileButton.ant-btn-primary:hover,
+.profileButton.ant-btn-primary:active,
+.profileButton.ant-btn-primary:focus {
   border: 1px solid white;
   box-shadow: 0px 0px 1px 1px white;
-   background: linear-gradient(to right, #3a398d, #b60d77);}
+  background: linear-gradient(to right, #3a398d, #b60d77);
+}
+
 .profileButton.ant-btn-primary i {
   margin-inline-end: 7px;
   font-size: 1.4rem;
@@ -105,7 +128,12 @@
   top: 0.2rem;
   transition: all 0.7s ease-in-out;
 }
-.profileButton.ant-btn-primary:hover i{transform: rotate(720deg);  margin-inline-end: 10px;}
+
+.profileButton.ant-btn-primary:hover i {
+  transform: rotate(720deg);
+  margin-inline-end: 10px;
+}
+
 .m-b-20 {
   margin-bottom: 20px
 }
@@ -127,7 +155,7 @@
 }
 
 .b-b-default {
-  border-bottom:  3px solid #c60874;
+  border-bottom: 3px solid #c60874;
 }
 
 .f-w-600 {
@@ -164,128 +192,191 @@
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out
 }
-.attachModal .ant-modal-title {
-   text-align: start;
-  color: rgb(39 64 145);
-  font-family: 'Cairo-Regular';}
-  .attachModal .ant-modal-close:focus,.attachModal  .ant-modal-close:hover {
- 
-    outline: none;
-    border: none;
-}
-.ant-modal-close:lang(ar) {
-   right: unset;
-  left: 0;}
-.attachModal .ant-modal-content {padding: 0 12px;}
-.attachModal .ant-modal-header  {  border-bottom: 2px solid #c60874;}
-.attachModal .ant-modal-footer {  border-top: 2px solid #c60874;
-  text-align: end;
-  direction: ltr;}
-  .uploadBTN{font-family: 'Cairo-Regular';
-    width: fit-content;
-    min-width: 200px;
-    font-weight: 500;}
-    .uploadBTN i{margin-inline-end: 8px;
-      position: relative;
-      font-size: 1.1rem;
-      color: #c50874; }
-      .attachModal  .ant-form-vertical .ant-form-item-label > label, 
-      .attachModal   .ant-col-24.ant-form-item-label > label,
-      .attachModal  .ant-col-xl-24.ant-form-item-label > label ,
-      .attachModal .ant-input
-      {
-      
-        font-family: 'Cairo-Regular';
-    }
 
-      .attachModal   .ant-input:hover, .attachModal  .uploadBTN:hover {
-        border-color: #274091;
-        border-right-width: 1px;
-    }
-  .attachModal .ant-input:focus,.attachModal  .ant-input-focused, .attachModal  .uploadBTN:focus {
-    border-color: #274091;
-    box-shadow: 0 0 0 1px rgb(39 64 145);
-    border-right-width: 1px;
-    outline: 0;
+.attachModal .ant-modal-title {
+  text-align: start;
+  color: rgb(39 64 145);
+  font-family: 'Cairo-Regular';
 }
+
+.attachModal .ant-modal-close:focus,
+.attachModal .ant-modal-close:hover {
+
+  outline: none;
+  border: none;
+}
+
+.ant-modal-close:lang(ar) {
+  right: unset;
+  left: 0;
+}
+
+.attachModal .ant-modal-content {
+  padding: 0 12px;
+}
+
+.attachModal .ant-modal-header {
+  border-bottom: 2px solid #c60874;
+}
+
+.attachModal .ant-modal-footer {
+  border-top: 2px solid #c60874;
+  text-align: end;
+  direction: ltr;
+}
+
+.uploadBTN {
+  font-family: 'Cairo-Regular';
+  width: fit-content;
+  min-width: 200px;
+  font-weight: 500;
+}
+
+.uploadBTN i {
+  margin-inline-end: 8px;
+  position: relative;
+  font-size: 1.1rem;
+  color: #c50874;
+}
+
+.attachModal .ant-form-vertical .ant-form-item-label>label,
+.attachModal .ant-col-24.ant-form-item-label>label,
+.attachModal .ant-col-xl-24.ant-form-item-label>label,
+.attachModal .ant-input {
+
+  font-family: 'Cairo-Regular';
+}
+
+.attachModal .ant-input:hover,
+.attachModal .uploadBTN:hover {
+  border-color: #274091;
+  border-right-width: 1px;
+}
+
+.attachModal .ant-input:focus,
+.attachModal .ant-input-focused,
+.attachModal .uploadBTN:focus {
+  border-color: #274091;
+  box-shadow: 0 0 0 1px rgb(39 64 145);
+  border-right-width: 1px;
+  outline: 0;
+}
+
 .attachModal .ant-form-item-control-input-content {
- 
+
   text-align: start;
 }
+
 .attachModal .ant-btn-primary {
   color: #fff;
   border-color: #274091;
-  background: #274091;}
-  .attachModal .saveBtn:hover ,.attachModal .saveBtn:active 
-  ,.attachModal .saveBtn:focus {
-   
-    border-color: #c50874;
-    background: #c50874;}
-    .ant-btn.ant-btn-default.cancelBTN {
-      border: 1px solid #c60874;
-      color: #c60874;
-  }
-  .attachModal .ant-radio-button-wrapper-checked {
-    /* border-right-color: #c60874; */
-    border-right:   solid #c60874 !important;
-    border-left:   solid #c60874 !important;
-    border: 1px solid #c60874 !important;
-    border-radius: 1px !important;
-    color:#c60874 !important;
+  background: #274091;
 }
+
+.attachModal .saveBtn:hover,
+.attachModal .saveBtn:active,
+.attachModal .saveBtn:focus {
+
+  border-color: #c50874;
+  background: #c50874;
+}
+
+.ant-btn.ant-btn-default.cancelBTN {
+  border: 1px solid #c60874;
+  color: #c60874;
+}
+
+.attachModal .ant-radio-button-wrapper-checked {
+  /* border-right-color: #c60874; */
+  border-right: solid #c60874 !important;
+  border-left: solid #c60874 !important;
+  border: 1px solid #c60874 !important;
+  border-radius: 1px !important;
+  color: #c60874 !important;
+}
+
 .attachModal .ant-form label {
   font-size: 14px;
   margin-inline-end: 10px;
- 
+
 }
-.attachModal  .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled)::before {
+
+.attachModal .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled)::before {
   background-color: #c60874;
 }
+
 /* .attachModal  */
-.attachModal  .ant-radio-button-wrapper {
+.attachModal .ant-radio-button-wrapper {
   width: 73px;
-  text-align: center;}
-  .tagParent .ant-tag { 
-    margin-right: 0;
-    margin-inline-end: 15px;
-    padding: 8px 10px;
-    padding-inline-start: 30px;
-    font-size: 1rem;
-    font-family: 'Cairo-Regular';
-  
-    background: #ffffff;
-    border: 1px solid #274091;
-   
+  text-align: center;
 }
+
+.tagParent .ant-tag {
+  margin-right: 0;
+  margin-inline-end: 15px;
+  padding: 8px 10px;
+  padding-inline-start: 30px;
+  font-size: 1rem;
+  font-family: 'Cairo-Regular';
+
+  background: #ffffff;
+  border: 1px solid #274091;
+
+}
+
 .tagsCont {
   flex-flow: wrap;
   row-gap: 15px;
 }
-.tagParent .ant-tag i{ font-size: 21px;
+
+.tagParent .ant-tag i {
+  font-size: 21px;
   position: relative;
-  opacity: 0; 
+  opacity: 0;
   transform: rotate(45deg);
   color: #c60874;
-  transition: all 0.2s ease-in-out; }
-  .tagParent:hover .ant-tag i{ 
-    opacity: 1;
-    transform: rotate(0deg);
-    transition: all 0.2s ease-in-out; 
-  }
-  .tagParent:hover .ant-tag {
-  color:  #274091;
-    border: 1px solid #c60974;
+  transition: all 0.2s ease-in-out;
 }
-  .tagParent .ant-tag .ant-tag-close-icon {
-    margin-left: 0px;
-    color: rgba(0, 0, 0, 0.45);
-    font-size: 10px;
-    cursor: pointer;
-    transition: all 0.3s;
-    margin-inline-end: -6px;
-    margin-inline-start: 10px;
+
+.tagParent:hover .ant-tag i {
+  opacity: 1;
+  transform: rotate(0deg);
+  transition: all 0.2s ease-in-out;
 }
+
+.tagParent:hover .ant-tag {
+  color: #274091;
+  border: 1px solid #c60974;
+}
+
+.tagParent .ant-tag .ant-tag-close-icon {
+  margin-left: 0px;
+  color: rgba(0, 0, 0, 0.45);
+  font-size: 10px;
+  cursor: pointer;
+  transition: all 0.3s;
+  margin-inline-end: -6px;
+  margin-inline-start: 10px;
+}
+
 .ant-select-item-option-content {
- 
+
   text-align: start;
+}
+
+.attachParet {
+  pointer-events: all;
+}
+
+.editSpan {
+
+  transition: all 0.3s ease-in;
+  opacity: 0;
+}
+
+.attachParet:hover .editSpan {
+  cursor: pointer;
+  color: #274091;
+  opacity: 1;
+  transition: all 0.3s ease-in;
 }
