--- a/src/components/Truck/style.css
+++ b/src/components/Truck/style.css
@@ -1,4 +1,3 @@
-
 .track h3 {
   font-size: 30px;
   font-weight: 700;
@@ -8,7 +7,7 @@
   text-align: start;
 }
 
-.wpo-track-section{
+.wpo-track-section {
   padding: 15px 0 20px;
   background: url('../../images/news/bg.jpg') no-repeat center center / cover;
 }
@@ -16,52 +15,68 @@
 .wpo-track-section .track form {
   position: relative;
 }
+
 .wpo-track-section .track button {
-  background:#c60874;
+  background: #c60874;
   color: #fff;
   border: 0;
   outline: 0;
   /* position: absolute;
   left:15px;
   top: 0; */
-  width: 200px;
+  width: 100%;
   height: 50px;
   transition: all .3s;
 }
-.wpo-track-section .track button:hover{
-background:#274091;
+
+.wpo-track-section .track button:hover {
+  background: #274091;
 }
-.wpo-track-section .track input {
+
+.wpo-track-section .track input,
+.wpo-track-section .track select {
   background: #fff;
   height: 50px;
-  font-size: 17px;
+  font-size: 14px;
   color: #333;
-  padding: 6px 80px 6px 30px;
+  padding: 6px 14px 6px 14px;
   border: 0;
+  font-family: 'Cairo-Regular';
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+
 .wpo-track-section .track input:lang(ar) {
-  
-  padding: 6px 30px 6px 80px;
- 
+
+  padding: 6px 14px 6px 14px;
+
 }
 
+.wpo-track-section .track .ant-select:not(.ant-select-customize-input) .ant-select-selector {
+  text-align: start;
+  height: 50px;
+  padding: 10px 15px 10px 15px;
+  color: #333;
+  font-family: 'Cairo-Regular';
+  font-size: 14px;
+}
 
 .form-control {
-border-radius:0px;
+  border-radius: 0px;
 }
 
 
-.sendCArgo{
+.sendCArgo {
   background: #c60874;
   box-shadow: 0px 0px 0px 39px #c60874;
   transition: all 0.4s ease-in-out;
 }
+
 .sendCArgo:hover {
   background: #c6087499;
   box-shadow: -3px 3px 4px 18px #c6087499;
 }
+
 .wpo-track-section .track button.sendCargobt {
   background: #274091;
   color: #fff;
@@ -70,52 +85,64 @@ border-radius:0px;
   width: 238px;
   height: 50px;
   margin: 0 auto;
-  
+
   position: relative;
   display: block;
   transition: all 0.3s ease-in-out;
 }
+
 .wpo-track-section .track button.sendCargobt:hover {
   background: #fff;
   color: #274091;
- 
+
 }
-.sendLogo{    position: absolute;
+
+.sendLogo {
+  position: absolute;
   max-width: 100%;
   display: block;
   height: 1px;
   opacity: 0;
   top: -40px;
   transform: rotate3d(1, 0, 0, 600deg);
-  transition: all 0.5s ease;}
-  .wpo-track-section .track button.sendCargobt:hover .sendLogo {
-    height: 20px;
-    opacity: 1;
-    top: unset;
-    transform: rotate3d(0, 0, 0, 180deg);
-   
-  }
-  @media(max-width:992px){
-    .sendCArgo{
-      padding-bottom: 17px;
-      box-shadow: none;
- 
-    }
-    .sendCArgo:hover {
-      
-      box-shadow: none ;
-    }
-    .track h3 {padding-top: 15px;
-      }
+  transition: all 0.5s ease;
+}
 
+.wpo-track-section .track button.sendCargobt:hover .sendLogo {
+  height: 20px;
+  opacity: 1;
+  top: unset;
+  transform: rotate3d(0, 0, 0, 180deg);
+
+}
+
+@media(max-width:992px) {
+  .sendCArgo {
+    padding-bottom: 17px;
+    box-shadow: none;
 
   }
-  @media(max-width: 575px){
-    .sendCArgo {
-      margin-top: 20px;
+
+  .sendCArgo:hover {
+
+    box-shadow: none;
   }
 
-  .wpo-track-section .track button{margin: 0 auto;
-  display: block;
-  width: 250px;}
+  .track h3 {
+    padding-top: 15px;
   }
+
+
+}
+
+@media(max-width: 575px) {
+  .sendCArgo {
+    margin-top: 20px;
+  }
+
+  .wpo-track-section .track button {
+    margin: 0 auto;
+    display: block;
+    width: 250px;
+  }
+}
