--- a/src/components/offers/offers.scss
+++ b/src/components/offers/offers.scss
@@ -28,6 +28,39 @@
     background-color: white;
 }
 
+.billLInk {
+    color: #274091;
+    font-size: 0.9rem;
+}
+
+.ant-radio-group {
+    direction: ltr;
+}
+
+.selectPay {
+    margin: 5px;
+    padding: 4px;
+    transition: all 0.2s ease-in;
+}
+
+.activePayer,
+.selectPay:hover {
+    color: #274091;
+
+    border: 1px solid;
+    background: white;
+    cursor: pointer;
+}
+
+.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled) {
+    z-index: 1;
+    color: #c60874;
+}
+
+a.addInFormBTN {
+    background: white;
+}
+
 .offerContainer {
     .offerDetail {
         display: flex;
