--- a/src/components/Bills/styleBills.scss
+++ b/src/components/Bills/styleBills.scss
@@ -189,6 +189,15 @@
         flex-direction: column;}
     }
  }
+ .savedLabelClipboard {
+   display:flex;
+   background-color: rgb(56, 54, 54,0.5);
+   color:white;
+   text-align: center;
+   position: absolute;
+   bottom: 1rem;
+   left: 50%;
+ }
 
 
  
