--- a/src/main-component/ShippingRequestPage/shippingrequestpage.scss
+++ b/src/main-component/ShippingRequestPage/shippingrequestpage.scss
@@ -195,11 +195,20 @@
     background: #5457609e;
 }
 
-.currentStage {
+.previousStage {
     //color:#34ccff;
     color: white;
-    background-color: rgba(255, 255, 255, 0.404);
+    background-color: rgba(111, 252, 98, 0.404);
 
+    p {
+        color: white;
+        font-size: x-large;
+        font-weight: bold;
+    }
+}
+.currentStage {
+    color:white;
+    background-color:purple;
     p {
         color: white;
         font-size: x-large;
