--- a/src/main-component/ShippingRequestPage/shippingrequestpage.scss
+++ b/src/main-component/ShippingRequestPage/shippingrequestpage.scss
@@ -4,6 +4,33 @@
     background-position: center;
     background-size: cover;
 
+    .selectLabel {
+        column-gap: 10px;
+        align-items: center;
+        padding-inline-start: 11px;
+
+        i {
+            color: #c60874;
+            border: 2px solid;
+            border-radius: 50%;
+            height: 20px;
+            width: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 14px;
+            cursor: pointer;
+            transition: all .2s ease-in-out;
+
+            &:hover {
+                color: #274091;
+                border: 1px solid;
+                font-size: 15px;
+
+            }
+        }
+    }
+
     .warningForEnterAddress {
         text-align: start;
         font-family: 'Cairo-Regular';
@@ -206,9 +233,11 @@
         font-weight: bold;
     }
 }
+
 .currentStage {
-    color:white;
-    background-color:purple;
+    color: white;
+    background-color: purple;
+
     p {
         color: white;
         font-size: x-large;
